info is changed 2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -33,7 +32,7 @@
         <li><a href="#sponsor">SPONSOR</a></li>
         <li><a href="#registration">REGISTRATION</a></li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
@@ -46,13 +45,14 @@
           <h5 class="header col s12 light">앱잼은 당일 주어진 주제를 가지고 24시간동안 앱을 함께 만드는 축제입니다.</h5>
         </div>
         <div class="row center">
-          <a href="http://www.onoffmix.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+          <!--<a href="http://www.onoffmix.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>-->
+          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">곧 신청 접수 시작합니다</a>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="11703052_482454888597501_7312452064314981437_n.jpg" alt="Unsplashed background img 1">
+    <div class="parallax"><img src="첫번째.jpg" alt="Unsplashed background img 1">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -110,7 +110,7 @@
         </div>
       </div>
     </div>
-    <<div class="parallax"><img src="1506516_916826191730395_5533550092142239661_n.jpg" alt="Unsplashed background img 2">
+    <div class="parallax"><img src="스케쥴.jpg" alt="Unsplashed background img 2">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -203,7 +203,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="12003865_582599398561738_8818867917470514996_n.jpg" alt="Unsplashed background img 3">
+    <div class="parallax"><img src="장소.jpg" alt="Unsplashed background img 3">
       <div class = "background-dark"></div>
   </div>
   </div>
@@ -229,7 +229,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="20151025_150348.jpg" alt="Unsplashed background img 2">
+    <div class="parallax"><img src="스태프.jpg" alt="Unsplashed background img 2">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -249,17 +249,17 @@
             <li class="collection-item avatar">
               <img src="송세진.png" alt="" class="circle">
               <span class="title"><h5>송세진</h5></span>
-              <p>Smarteen AppClub 5기 부회장, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 부회장, 울산애니원고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="강상우.jpg" alt="" class="circle">
               <span class="title"><h5>강상우</h5></span>
-              <p>Smarteen AppClub 5기 부회장, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 부회장, 게임과학고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="이종창.jpg" alt="" class="circle">
               <span class="title"><h5>이종창</h5></span>
-              <p>Smarteen AppClub 5기 총무, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 총무, 한세사이버고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="김희규.jpg" alt="" class="circle">
@@ -269,17 +269,17 @@
             <li class="collection-item avatar">
               <img src="김나연.jpg" alt="" class="circle">
               <span class="title"><h5>김나연</h5></span>
-              <p>Smarteen AppClub 5기 총무, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 총무, 미림여자정보과학고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="이정석.png" alt="" class="circle">
               <span class="title"><h5>이정석</h5></span>
-              <p>Smarteen AppClub 5기 총무, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 총무, 인평자동차고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="변혜리.jpg" alt="" class="circle">
               <span class="title"><h5>변혜리</h5></span>
-              <p>Smarteen AppClub 5기 총무, 선린인터넷고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 총무, 미림여자정보과학고등학교 재학 중</p>
             </li>
           </ul>
         </div>
@@ -296,7 +296,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="11796181_916826145063733_255063410877086592_n.jpg" alt="Unsplashed background img 2">
+    <div class="parallax"><img src="스폰서.jpg" alt="Unsplashed background img 2">
       <div class = "background-dark"></div>
   </div>
   </div>
@@ -316,12 +316,12 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">상상만 해도 한번 해보고 싶으시지 않으신가요? 지금 바로 신청하세요!</h5>
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+          <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">여러분들과 함께 할 모든 준비가 마무리되고 있습니다,<br>조금만 기다려주세요!</h5>
+          <!--<a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>-->
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="10730225_724503900958820_3064095886648626294_n.jpg" alt="Unsplashed background img 3">
+    <div class="parallax"><img src="마지막.jpg" alt="Unsplashed background img 3">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -332,8 +332,6 @@
         <div class="col l6 s12">
           <h5 class="white-text">Smarteen App Club</h5>
           <p class="grey-text text-lighten-4">Smarteen App Club은 SK플래닛과 중소기업청이 공동주관하는 Smarteen App Chanllenge 참가자 커뮤니티 입니다.</p>
-
-
         </div>
         <div class="right col l3 s12">
           <h5 class="white-text">문의하기</h5>
