--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
           <h5 class="header col s12 light">앱잼은 당일 주어진 주제를 가지고 24시간동안 앱을 함께 만드는 축제입니다.</h5>
         </div>
         <div class="row center">
-          <!--<a href="http://www.onoffmix.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>-->
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">곧 신청 접수 시작합니다</a>
+          <a href="http://goo.gl/forms/abJ14fpLa8" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
         </div>
         <br><br>
 
@@ -135,57 +134,57 @@
            <tr>
              <td>오후 01:00 ~ 01:30</td>
              <td>등록 및 일정 안내</td>
-             <td>미정</td>
+             <td>4층 입구</td>
            </tr>
            <tr>
              <td>01:30 ~ 02:30</td>
              <td>오리엔테이션 및 팀 빌딩</td>
-             <td>미정</td>
+             <td>4층 B 강의장</td>
            </tr>
            <tr>
              <td>02:30 ~ 06:00</td>
              <td>팀별 앱 개발</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>06:00 ~ 07:00</td>
              <td>저녁 식사</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>07:00 ~ 12:00</td>
              <td>팀별 앱 개발</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>오전 00:00 ~ 02:00</td>
              <td>야식 / 매점 운영</td>
-             <td>미정</td>
+             <td>4층</td>
            </tr>
            <tr>
              <td>02:00 ~ 07:30</td>
              <td>팀별 앱 개발</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>07:30 ~ 08:30</td>
              <td>조식</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>09:00</td>
              <td>발표자료 제출</td>
-             <td>미정</td>
+             <td>4층 강의장 B, C, D 및 분과룸</td>
            </tr>
            <tr>
              <td>09:00 ~ 11:00</td>
              <td>발표 및 심사</td>
-             <td>미정</td>
+             <td>4층 B 및 C 강의장</td>
            </tr>
            <tr>
              <td>11:00 ~ 12:00</td>
              <td>시상식 및 단체사진 촬영</td>
-             <td>미정</td>
+             <td>4층 B 강의장</td>
            </tr>
          </tbody>
        </table>
@@ -203,18 +202,18 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="장소.jpg" alt="Unsplashed background img 3">
+    <div class="parallax"><img src="상생혁신센터.jpg" alt="Unsplashed background img 3">
       <div class = "background-dark"></div>
   </div>
   </div>
 
   <div class="container">
     <div class="section">
-
       <div class="row">
         <div class="col s12 center">
-          <h4>장소 선정 중 입니다.</h4>
-          <p class="left-align center">여러분들에게 최고의, 최적의 장소를 제공해드리기 위해 관계자분들과 운영진들이 노력하고 있습니다.</p>
+          <h4>상생혁신센터</h4>
+          <p class="left-align center">SK플래닛 운영하고 아이디어 사업화를 지원하는 곳 입니다. 앱잼에 참여해오셨던 분이라면 다들 알만한 장소죠.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.812579729964!2d126.95762095122268!3d37.465146837586026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca01b88b33201%3A0x72ee13a14a8b8dbe!2zU0vtlIzrnpjri5sg7IOB7IOd7ZiB7Iug7IS87YSw!5e0!3m2!1sko!2skr!4v1448113639828" width="100%" height="450px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -305,7 +304,8 @@
     <div class="section">
 
       <div class="row center">
-         <h5>여러분들을 지원사격해줄 많은 기업들이 선정 및 논의 중에 있습니다<br></h5>
+         <h4>앱잼을 지원사격해주시는 스폰서를 소개합니다!<br></h4>
+         <p>이번에는 서울창조경제혁신센터의 후원으로 참가비가 따로 없으며, 무료로 참가할 수 있습니다.</p>
          <img class="responsive-img" width="300" src="oic.jpg">
       </div>
     </div>
@@ -316,8 +316,8 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">여러분들과 함께 할 모든 준비가 마무리되고 있습니다,<br>조금만 기다려주세요!</h5>
-          <!--<a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>-->
+          <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">여러분들과 함께 할 모든 준비가 마쳤습니다.<br>여러분들의 많은 참여 부탁드립니다!</h5>
+          <a href="http://goo.gl/forms/abJ14fpLa8" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
         </div>
       </div>
     </div>
