information is changed

--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
           </div>
         </div>
 
-      </div>
-
-      <div class="row">
-        <div class="video-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/42Gtm4-Ax2U" frameborder="0" allowfullscreen></iframe>
+        <div class="col s12 center">
+          <div class="image-container">
+            <img width="650" src="진짜리얼리얼최종포스터어ㅏ어ㅏ-01.jpg">
+          </div>
         </div>
       </div>
     </div>
