sponsor is changed

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
          <h4>앱잼을 지원사격해주시는 스폰서를 소개합니다!<br></h4>
          <p>이번에는 서울창조경제혁신센터의 후원으로 참가비가 따로 없으며, 무료로 참가할 수 있습니다.</p>
          <img class="responsive-img" width="300" src="oic.jpg">
-         <img class="responsive-img" width="300" src="서창경.png">
+         <h4>서울창조경제혁신센터<br></h4>
       </div>
     </div>
   </div>
