--- a/not_yet.html
+++ b/not_yet.html
@@ -60,7 +60,7 @@ a {
 		<br>
 		<br>
 		<p class="center" width="350px">
-			신청은 2016년 3월 5일(12시 넘어가자마자)부터 3월 20일 밤 12시까지 가능합니다.
+			신청은 아직 불가능합니다. 곧 신청 일자가 확정되고 나서 알려드리도록 하겠습니다.
 		</p
 		<br>
 	</div>
