--- a/faq.html
+++ b/faq.html
@@ -57,6 +57,7 @@
     <div class="section">
       <!--   Icon Section   -->
       <div class="row center">
+            <h4>답변이 없는 일부 내용들은 빠른 시일 내에 작성하도록 하겠습니다.</h4>
             <h5 class="light">앱잼과 관련된 정보는 아래 페이스북 그룹과 페이지에서 빠르게 확인하실 수 있습니다.</h5>
             앱잼 페이지<br> <a href="https://www.facebook.com/smarteenappclub">https://www.facebook.com/smarteenappclub</a><br>
             Smarteen AppClub 그룹<br> <a href="https://www.facebook.com/groups/skappclub/">https://www.facebook.com/groups/skappclub/</a><br>
@@ -66,10 +67,13 @@
           </div>
       </div>
       <h5>- 입금 확인은 어떻게 하나요?</h5>
+      <a href="https://drive.google.com/open?id=1myAjB7ijqEehvy-3wnwzY09LUxRkuXp0ZYU0z62gDfw" target="_blank">입금자 명단 링크</a>에서 입금 확인 여부를 확인해 보세요. 명단은 2~3일마다 갱신되며 이후에도 추가되지 않을 시 회계담당 김나연(전화번호)로 문의주시기 바랍니다.
       <h5>- 실수로 타인(부모님) 이름으로 계좌이체를 해버렸어요.</h5>
+      회계담당 김나연(010-8712-6145)에게 신청자명과, 연락처, 보낸사람이름 등을 문자로 알려주시면 추후 수정해 드립니다.
       <h5>- 제가 참가 확정자인지는 어떻게 알 수 있나요?</h5>
+      추후 참가 확정자를 공개할 예정입니다. 그때 알려드리도록 하겠습니다. 페이스북 페이지를 잘 봐주세요!!!
       <h5>- 이미 돈을 냈는데 대회에 참가하지 못하게 되었어요.</h5>
-
+      회계담당 김나연(010-8712-6145)에게 신청자명과 연락처 등을 알려주신 뒤 취소하겠다고 문자로 알려주시면 환불 및 취소 절차를 진행하도록 하겠습니다. 환불은 대회 1주일 전(3월 20일)까지만 가능합니다. 환불은 주말에 일괄처리되니 기다려주셔야 합니다.
       <div class="row center">
           <div class="icon-block">
             <h1 id="refund" class="center red-text"><i class="material-icons">attach_money</i></h1>
@@ -77,8 +81,12 @@
           </div>
       </div>
       <h5>- 환불은 어떻게 하나요?</h5>
+      회계담당 김나연(010-8712-6145)에게 <b>문자로 이름, 연락처와 함께 알려주시면 처리해드리도록 하겠습니다.</b>
       <h5>- 환불을 신청했는데 돈이 들어오지 않고 있습니다.</h5>
+      환불신청은 매주 토요일 오후 1시부터 주말동안 일괄처리하니 기다려 주셔야 합니다.
 
+      <h5>- 환불은 언제까지 가능한가요?</h5>
+      대회 1주일 전인 20일까지만 가능합니다. 그 이후에는 환불하실 수 없으며 보내주신 돈은 앱잼 운영을 위해 소중하게 사용하도록 하겠습니다.
       <div class="row center">
           <div class="icon-block">
             <h1 id="privacy" class="center red-text"><i class="material-icons">fingerprint</i></h1>
@@ -86,8 +94,14 @@
           </div>
       </div>
       <h5>- 저의 어떤 개인정보가 사용되나요?</h5>
+      수집하는 정보는 다음과 같습니다: 참가자 성명, 성별, 학교명, 전화번호, 이메일주소, 참가 분야, 스타터/교통비지원 여부 , 대회 기간 동안의 활동 사진 및 영상
       <h5>- 제 개인정보는 어떻게 사용되나요?</h5>
+      AppJam 통계 및 운영 목적으로 이용됩니다.
       <h5>- 제 개인정보는 언제까지 사용되나요?</h5>
+      성별, 학교명, 참가 분야, 스타터/교통비 지원 여부, 사진 및 영상을 제외한 개인정보는 상을 수상하지 않은 경우 행사 후 즉시 파기 <br>  
+수상하는 경우 제안 서비스 관리(수상 이력 증명서 제공 등)를 위해 수상기관에서 5년 동안 보관 후 파기
+      <h5>- 제출한 작품은 어떻게 되나요?</h5>
+      대회가 끝난 뒤 소스 코드와 발표 자료들을 GitHub에 올려서 여러 사람들이 볼 수 있도록 공유할 예정입니다. 소스 코드에 민감한 정보가 있다면 제외하고 제출하셔도 괜찮습니다. 그러나 되도록 모든 소스를 첨부하는 것을 권장합니다.
 
       <div class="row center">
           <div class="icon-block">
@@ -95,10 +109,16 @@
             <h2 class="center">대회 운영</h2>
           </div>
       </div>
-      <h5>- 저의 어떤 개인정보가 사용되나요?</h5>
-      <h5>- 제 개인정보는 어떻게 사용되나요?</h5>
-      <h5>- 제 개인정보는 언제까지 사용되나요?</h5>
+      <h5>- 대회 도중 외부로 나가거나 대회 장소로 들어오는 게 가능한가요?</h5>
+      중요한 일이 아닐 경우 자제 부탁드립니다.
+      <h5>- 참가 공문을 학교로 보내주실 수 있나요?</h5>
 
+      <h5>- 식사가 제공되나요?</h5>
+      첫째날 저녁, 야식, 둘째날 아침이 제공됩니다.
+      <h5>- 노트북이 제공되나요?</h5>
+      아니요, 개인 노트북을 갖고 오셔야 합니다. PC, 모니터 등은 주변 사람들이 불편할 수 있으므로 되도록 가져오지 말아 주시기 바랍니다.
+      <h5>- 인터넷 환경은 어떤가요?</h5>
+      무선 AP를 충분히 설치하여 원활한 인터넷 환경을 만들어 두었습니다.
       <div class="row center">
           <div class="icon-block">
             <h1 id="prize" class="center red-text"><i class="material-icons">book</i></h1>
@@ -109,6 +129,7 @@
       <h5>- 심사 기준은 무엇인가요?</h5>
       <h5>- '협동심 점수'는 심사에 얼마나 영향을 주나요?</h5>
       <h5>- 역대 수상 작품은 어디에서 확인할 수 있나요?</h5>
+      현재 9회 앱잼 수상작들은 <a href="https://github.com/KimHeeKue/The-9th-AppJam">GitHub appjam9th</a> 페이지에서 확인하실 수 있습니다.
       <h5>- 상장은 어떻게 받나요?</h5>
 
       <div class="row center">
