apply date fixed

--- a/not_yet.html
+++ b/not_yet.html
@@ -56,12 +56,10 @@ a {
 		<p id="not-yet" class="center" width="350px">
 			아직 신청 기간이 아닙니다.
 		</p>
+    <p class="center" width="350px" style="font-size:18pt">
+      신청은 2016년 3월 7일 월요일 오후 4시부터 가능합니다!!!
+    </p>
 		<img src="image/appjam10th.jpg" style:"margin:0px auto;">
-		<br>
-		<br>
-		<p class="center" width="350px">
-			신청은 아직 불가능합니다. 곧 신청 일자가 확정되고 나서 알려드리도록 하겠습니다.
-		</p
 		<br>
 	</div>
     </div>
