--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h5 class="header col s12 light">앱잼은 당일 주어진 주제를 가지고 24시간동안 앱을 함께 만드는 축제입니다.</h5>
         </div>
         <div class="row center">
-          <a href="not_yet.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+          <a href="http://goo.gl/gzR0He" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
         </div>
         <br><br>
 
@@ -365,7 +365,7 @@
       <div class="container">
         <div class="row center">
           <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">여러분들과 함께 할 모든 준비가 마쳤습니다.<br>여러분들의 많은 참여 부탁드립니다!</h5>
-          <a href="not_yet.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+          <a href="http://goo.gl/gzR0He" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
         </div>
       </div>
     </div>
