some content fixed, link added

--- a/detail.html
+++ b/detail.html
@@ -79,7 +79,7 @@ th, td {
 <a href="http://www.facebook.com/smarteenappclub" target="_blank">Smarteen App Club 페이스북 페이지</a><br>
 <a href="http://www.facebook.com/groups/skappclub" target="_blank">Smarteen App Club 페이스북 그룹</a><br>
 <br>
-· 일시 : 2016.3.26 (토) 오후 1시~ 27(일) 오후 12시<br>
+· 일시 : 2016.3.26 (토) 오후 1시 ~ 27(일) 오후 12시<br>
 · 대상 : 1994년생부터 2005년생까지 ( 2016년 기준, 14세부터 23세까지 )<br>
 <h1 id="position">직군</h1>
 - 기획자 / 50명<br>
@@ -122,7 +122,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 * 참가하신 모든 분들께 앱잼스티커를 제공해드립니다.<br>
 <h1 id="registration">신청 방법</h1>
 * 이번 앱잼에서는 팀을 구성해서 오시든, 구성하지 않으시든 무조건 개인단위로만 신청이 가능합니다.<br>
-1. <a href="apply">여기</a>로 가서 신청서를 작성한다.<br>
+1. <a href="http://goo.gl/gzR0He">여기</a>로 가서 신청서를 작성한다.<br>
 2. 아래 입금계좌로 참가비를 납부한다.<br>
 3. 즐거운 마음으로 3월 26일에 앱잼에 온다.<br>
 <br>
@@ -131,6 +131,8 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 ﻿008-108936-01-017 (기업 / 김나연)으로 입금 (참가비 10,000원)<br>
 * 신청자 이름과 입금자 이름을 같게 해주시길 바랍니다.<br>
 <b>* 타인(주로 부모님) 계좌로 입금 시 반드시 보낼 때 보내는 사람 이름을 바꿔주셔야 합니다</b><br>
+<br>
+입금은 2~3일마다 확인하며 입금 확인 여부는 <a href="https://drive.google.com/open?id=1myAjB7ijqEehvy-3wnwzY09LUxRkuXp0ZYU0z62gDfw">이곳</a>에서 확인하실 수 있습니다. 입금을 한 지 며칠이 지나도 입금되지 않았을 경우 김나연(01-8712-6145) 혹은 회장단 멤버들에게 연락해주시기 바랍니다.
 <br>
 <h2>현장접수와 현장 결제는 불가능합니다</h2>
 기존에 있던 현장 접수과 현장 결제로 예상치 못한 돌방상황이 많이 발생하여 원활한 진행이 불가피해진 관계로 오직 온라인 접수 및 결제를 통해 접수를 받고 있습니다.<br>
@@ -202,7 +204,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
              <td>7층 엘리베이터 앞</td>
            </tr>
           <tr>
-            <td colspan="3">3월 28일 일요일</td>
+            <td colspan="3">3월 27일 일요일</td>
           </tr>
            <tr>
              <td>AM 12:00 ~ AM 07:00</td>
