--- a/detail.html
+++ b/detail.html
@@ -126,6 +126,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 2. 아래 입금계좌로 참가비를 납부한다.<br>
 3. 즐거운 마음으로 3월 26일에 앱잼에 온다.<br>
 <br>
+<b>참가 우선순위는 신청순이 아닌 입금순입니다!!!! 신청자가 8일 현재 약 190명이지만 빠르게 입금해주시면 아직 늦지 않았습니다</b><br>
 <br>
 <h2>결제방법</h2>
 ﻿008-108936-01-017 (기업 / 김나연)으로 입금 (참가비 10,000원)<br>
