pay please at index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div class="section">
       <!--   Icon Section   -->
       <div class="row">
+        <b style="font-size: 18pt; text-align:center">참가 우선순위는 신청순이 아닌 입금순입니다!!!!<br> 신청자가 8일 현재 약 190명이지만 빠르게 입금해주시면 아직 늦지 않았습니다</b><br>
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center red-text"><i class="material-icons">flash_on</i></h2>
