--- a/detail.html
+++ b/detail.html
@@ -72,24 +72,28 @@ th, td {
 ﻿앱잼은 당일 주어진 주제를 가지고 즉석에서 팀을 구성해 24시간 동안 앱을 만들어내는 축제입니다. 주제와 관련된 앱 아이디어를 직군별로 구성된 팀원들끼리 앱을 개발합니다.<br>
 안드로이드, 아이폰, 웹앱 모바일에서만 구동된다면 어느 플랫폼이든 상관하지 않습니다. <br>
 유틸리티, 게임 등 장르를 구별하지 않습니다.<br>
-*단, 심사는 생활/게임으로 나누어서 진행됩니다.<br>
+제 11회 앱잼부터는 사물인터넷(IoT) 분야도 추가되어 대회를 진행하고 있습니다. 
+*단, 심사는 생활, 게임, IoT 각각 나누어 진행됩니다.<br>
 <br>
 <a href="http://www.appjam.kr" target="_blank">AppJam공식 홈페이지</a><br>
 <a href="http://blog.naver.com/b_hyeri" target="_blank">AppJam공식 블로그</a><br>
 <a href="http://www.facebook.com/smarteenappclub" target="_blank">Smarteen App Club 페이스북 페이지</a><br>
 <a href="http://www.facebook.com/groups/skappclub" target="_blank">Smarteen App Club 페이스북 그룹</a><br>
 <br>
-· 일시 : 2016.3.26 (토) 오후 1시 ~ 27(일) 오후 12시<br>
-· 대상 : 1994년생부터 2005년생까지 ( 2016년 기준, 14세부터 23세까지 )<br>
+· 일시 : 2016.7.23 (토) 오후 1시 ~ 24(일) 오후 12시<br>
+· 장소 : 안양창조경제융합센터
+· 대상(생활/게임) : 1993년생부터 2003년생까지 ( 2016년 기준, 14세부터 24세까지 )<br>
+· 대상(IoT) : 1998년생부터 2003년생까지 ( 2016년 기준, 14세부터 19세까지 )<br>
+· 후원 : 안양시청, 안양창조경제융합센터
 <h1 id="position">직군</h1>
-- 기획자 / 50명<br>
-- 개발자 / 90명<br>
-- 디자이너 / 70명<br>
+- 기획자 / 30명<br>
+- 개발자 / 70명<br>
+- 디자이너 / 40명<br>
+- IoT 개발자 / 40명<br>
 <br>
-STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
-앱잼에 처음 참여하시는 분들(STARTER)이 속한 팀에게 혜택을 드립니다.<br>
+제 11회 앱잼부터는 더이상 새로운 참가자(Starter)에게 혜택을 드리지 않습니다!<br>
 <br>
-<h1 id="prize">시상(생활, 게임 분야 각각)</h1>
+<h1 id="prize">시상(생활, 게임, IoT 분야 각각)</h1>
 <table class="center">
 <tr>
 <th>상 이름</th>
@@ -97,43 +101,41 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 <th>혜택</th>
 </tr>
 <tr>
-  <td>최우수상</td>
+  <td>최우수상(안양시장상)</td>
   <td>1</td>
-  <td>상금 ?만원</td>
+  <td>상금 50만원</td>
 </tr>
 <tr>
-  <td>우수상</td>
+  <td>우수상(안양시장상)</td>
   <td>1</td>
-  <td>상금 ?만원</td>
+  <td>상금 30만원</td>
 </tr>
 <tr>
-  <td>장려상</td>
-  <td>3</td>
-  <td>상금 ?만원</td>
-</tr>
-<tr>
-  <td>특별상</td>
-  <td>3</td>
-  <td>상금 ?만원</td>
+  <td>장려상(안양시장상)</td>
+  <td>생활/게임 4팀, IoT 1팀</td>
+  <td>상금 10만원</td>
 </tr>
 </table>
 <br>
-* 이번 앱잼에서는 다양한 시상을 위해 준비했습니다. 특별한 상이 여러분을 기다리고 있습니다!<br>
-* 참가하신 모든 분들께 앱잼스티커를 제공해드립니다.<br>
+* 제 11회 앱잼에는 특별상이 존재하지 않습니다.<br>
+<br>
 <h1 id="registration">신청 방법</h1>
 * 이번 앱잼에서는 팀을 구성해서 오시든, 구성하지 않으시든 무조건 개인단위로만 신청이 가능합니다.<br>
-1. <a href="http://goo.gl/gzR0He">여기</a>로 가서 신청서를 작성한다.<br>
+1. 아래의 신청 링크를 누르고 신청서를 작성한다.<br>
+<br>
+  <a href="https://goo.gl/IUoylV" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(생활/게임)</a>
+  <a href="https://goo.gl/qonlcM" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(IoT)</a><br>
+<br>
 2. 아래 입금계좌로 참가비를 납부한다.<br>
-3. 즐거운 마음으로 3월 26일에 앱잼에 온다.<br>
+3. 즐거운 마음으로 7월 23일에 앱잼에 온다.<br>
 <br>
-<b>참가 우선순위는 신청순이 아닌 입금순입니다!!!! 신청자가 8일 현재 약 190명이지만 빠르게 입금해주시면 아직 늦지 않았습니다</b><br>
 <br>
-<h2>결제방법</h2>
+<h2>참가비 결제방법</h2>
 ﻿008-108936-01-017 (기업 / 김나연)으로 입금 (참가비 10,000원)<br>
 * 신청자 이름과 입금자 이름을 같게 해주시길 바랍니다.<br>
 <b>* 타인(주로 부모님) 계좌로 입금 시 반드시 보낼 때 보내는 사람 이름을 바꿔주셔야 합니다</b><br>
 <br>
-입금은 2~3일마다 확인하며 입금 확인 여부는 <a href="https://drive.google.com/open?id=1myAjB7ijqEehvy-3wnwzY09LUxRkuXp0ZYU0z62gDfw">이곳</a>에서 확인하실 수 있습니다. 입금을 한 지 며칠이 지나도 입금되지 않았을 경우 김나연(01-8712-6145) 혹은 회장단 멤버들에게 연락해주시기 바랍니다.
+입금은 2~3일마다 확인하며 입금 확인 여부는 <a href="https://drive.google.com/open?id=1CkqbL-eOqEjRFZON8yPeHx90k_Vi910RcUJ2CPXRPoI">이곳</a>에서 확인하실 수 있습니다. 입금을 한 지 며칠이 지나도 입금되지 않았을 경우 김나연(010-8712-6145) 혹은 회장단 멤버들에게 연락해주시기 바랍니다.
 <br>
 <h2>현장접수와 현장 결제는 불가능합니다</h2>
 기존에 있던 현장 접수과 현장 결제로 예상치 못한 돌방상황이 많이 발생하여 원활한 진행이 불가피해진 관계로 오직 온라인 접수 및 결제를 통해 접수를 받고 있습니다.<br>
@@ -141,7 +143,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 <br>
 + 현장에서 접수와 결제를 요구 하시는 경우, 집으로 가차 없이 돌려보내드리오니 이점 숙지하시길 바랍니다.<br>
 <h2>신청 마감 및 환불 규정</h2>
-참가비 환불은 신청을 마감할 때(3월 20일) 까지만 가능 합니다. 참가자가 확정된 후에는 참가비 환불이 어렵습니다. 이점 확인하신 후 신청해 주시기 바랍니다.<br>
+참가비 환불은 신청을 마감할 때(7월 16일) 까지만 가능 합니다. 참가자가 확정된 후에는 참가비 환불이 어렵습니다. 이점 확인하신 후 신청해 주시기 바랍니다.<br>
 <br>
 - 환불 하실 경우 김나연(010-8712-6145)로 본인의 성함과 받을 계좌번호 예금주명 은행명을 보내주시면 환불하시는 분이 모였을 때 매주 토요일 오후 1시 이후에 일괄적으로 보내드리고 있습니다. 보다 느긋한 마음으로 기다리신다면 돈은 돌려드리도록 하겠습니다.<br>
 <br>
@@ -156,7 +158,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 <br>
 <h2>교통비 지원</h2>
 - 지방에서 올라오시는 참가자분들을 위해 당일 교통비를 편도로 지급할 예정입니다. 교통비는 당일기준 가장 싼 고속버스로 지급합니다. 교통비지원에 있어서 해당 일과 출발지가 적힌 영수증은 필수로 지참해야됩니다. <br>
-- 교통비 지원 시간은 개발타임 도중에 이루워질 예정입니다.<br>
+- 교통비 지원 시간은 대회 도중에 따로 이루워질 예정입니다.(7월 23일 ~ 24일)<br>
 - 추가적으로 교통비 지원에 관해서는 김나연(010-8712-6145)에게 문의하시기 바랍니다.<br>
 <h1 id="schedule">대회 일정</h1>
         <table class="centered highlight">
@@ -170,7 +172,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 
          <tbody>
           <tr>
-            <td colspan="3">3월 26일 토요일
+            <td colspan="3">7월 23일 토요일
             </td>
           </tr>
            <tr>
@@ -205,7 +207,7 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
              <td>7층 엘리베이터 앞</td>
            </tr>
           <tr>
-            <td colspan="3">3월 27일 일요일</td>
+            <td colspan="3">7월 24일 일요일</td>
           </tr>
            <tr>
              <td>AM 12:00 ~ AM 07:00</td>
@@ -242,9 +244,8 @@ STARTER: 새롭게 앱잼에 오시는 스타터를 환영합니다!<br>
 - 지하철 : 4호선 지하철 평촌역 하차 ▶ 3번 출구 ▶ 도보로 10분소요<br>
 <br>
 <br>
-<h1>더욱 특별해진 10회 앱잼!</h1>
-열 번째 개최를 맞아 10회 앱잼 기념식, 앱잼 굿즈 등 보다 새롭게 바뀌고 다양한 시상과 친목을 위해 노력하였습니다.<br>
-새로운 사람들과 소통하는 특별한 제10회 AppJam 많은 신청과 관심 부탁드립니다. 감사합니다.<br>
+<h1>IoT가 추가되는 제 11회 앱잼!</h1>
+이번 앱잼에는 IoT분야가 신설됩니다. 저희는 보다 새로운 앱잼을 위해 노력하고 있습니다. 이번 11회 앱잼에서도 다양한 분야의 다양한 서비스/제품들이 나올 수 있도록 저희가 최고의 지원을 할 것이며, 여러분은 만들고 보고 즐기시면 됩니다!
 </div>
 </div></div>
 
