--- a/faq.html
+++ b/faq.html
@@ -67,13 +67,13 @@
           </div>
       </div>
       <h5>- 입금 확인은 어떻게 하나요?</h5>
-      <a href="https://drive.google.com/open?id=1myAjB7ijqEehvy-3wnwzY09LUxRkuXp0ZYU0z62gDfw" target="_blank">입금자 명단 링크</a>에서 입금 확인 여부를 확인해 보세요. 명단은 2~3일마다 갱신되며 이후에도 추가되지 않을 시 회계담당 김나연(전화번호)로 문의주시기 바랍니다.
+      <a href="https://drive.google.com/open?id=1CkqbL-eOqEjRFZON8yPeHx90k_Vi910RcUJ2CPXRPoI" target="_blank">입금자 명단 링크</a>에서 입금 확인 여부를 확인해 보세요. 명단은 2~3일마다 갱신되며 이후에도 추가되지 않을 시 회계담당 김나연(010-8712-6145)로 문의주시기 바랍니다.
       <h5>- 실수로 타인(부모님) 이름으로 계좌이체를 해버렸어요.</h5>
       회계담당 김나연(010-8712-6145)에게 신청자명과, 연락처, 보낸사람이름 등을 문자로 알려주시면 추후 수정해 드립니다.
       <h5>- 제가 참가 확정자인지는 어떻게 알 수 있나요?</h5>
       추후 참가 확정자를 공개할 예정입니다. 그때 알려드리도록 하겠습니다. 페이스북 페이지를 잘 봐주세요!!!
       <h5>- 이미 돈을 냈는데 대회에 참가하지 못하게 되었어요.</h5>
-      회계담당 김나연(010-8712-6145)에게 신청자명과 연락처 등을 알려주신 뒤 취소하겠다고 문자로 알려주시면 환불 및 취소 절차를 진행하도록 하겠습니다. 환불은 대회 1주일 전(3월 20일)까지만 가능합니다. 환불은 주말에 일괄처리되니 기다려주셔야 합니다.
+      회계담당 김나연(010-8712-6145)에게 신청자명과 연락처 등을 알려주신 뒤 취소하겠다고 문자로 알려주시면 환불 및 취소 절차를 진행하도록 하겠습니다. 환불 신청은 7월 23일까지 가능합니다. 환불은 주말에 일괄처리되니 기다려주셔야 합니다.
       <div class="row center">
           <div class="icon-block">
             <h1 id="refund" class="center red-text"><i class="material-icons">attach_money</i></h1>
@@ -86,7 +86,7 @@
       환불신청은 매주 토요일 오후 1시부터 주말동안 일괄처리하니 기다려 주셔야 합니다.
 
       <h5>- 환불은 언제까지 가능한가요?</h5>
-      대회 1주일 전인 20일까지만 가능합니다. 그 이후에는 환불하실 수 없으며 보내주신 돈은 앱잼 운영을 위해 소중하게 사용하도록 하겠습니다.
+      7월 23일까지 가능합니다. 그 이후에는 환불하실 수 없으며 보내주신 돈은 앱잼 운영을 위해 소중하게 사용하도록 하겠습니다.
       <div class="row center">
           <div class="icon-block">
             <h1 id="privacy" class="center red-text"><i class="material-icons">fingerprint</i></h1>
@@ -94,7 +94,7 @@
           </div>
       </div>
       <h5>- 저의 어떤 개인정보가 사용되나요?</h5>
-      수집하는 정보는 다음과 같습니다: 참가자 성명, 성별, 학교명, 전화번호, 이메일주소, 참가 분야, 스타터/교통비지원 여부 , 대회 기간 동안의 활동 사진 및 영상
+      수집하는 정보는 다음과 같습니다: 참가자 성명, 성별, 학교명, 전화번호, 이메일주소, 참가 분야, 교통비지원 여부 , 대회 기간 동안의 활동 사진 및 영상
       <h5>- 제 개인정보는 어떻게 사용되나요?</h5>
       AppJam 통계 및 운영 목적으로 이용됩니다.
       <h5>- 제 개인정보는 언제까지 사용되나요?</h5>
@@ -114,7 +114,7 @@
       <h5>- 참가 공문을 학교로 보내주실 수 있나요?</h5>
 
       <h5>- 식사가 제공되나요?</h5>
-      첫째날 저녁, 야식, 둘째날 아침이 제공됩니다.
+      첫째날 저녁, 야식, 둘째날 아침이 제공됩니다. 간식도 충분히 준비되어 있어 맛있게 드시면 됩니다.
       <h5>- 노트북이 제공되나요?</h5>
       아니요, 개인 노트북을 갖고 오셔야 합니다. PC, 모니터 등은 주변 사람들이 불편할 수 있으므로 되도록 가져오지 말아 주시기 바랍니다.
       <h5>- 인터넷 환경은 어떤가요?</h5>
@@ -126,6 +126,7 @@
           </div>
       </div>
       <h5>- 어떤 사람들이 심사하나요?</h5>
+      STAC, 앱잼 등에 많이 참여해보고 현역 앱 기획자/개발자/디자이너 위주로 선발하고 있습니다. 또한 출신학교 차별을 막기 위해 같은 학교 심사위원을 여러 명 두지 않는 등 공정한 심사를 위해 노력하고 있습니다.
       <h5>- 심사 기준은 무엇인가요?</h5>
       <h5>- '협동심 점수'는 심사에 얼마나 영향을 주나요?</h5>
       <h5>- 역대 수상 작품은 어디에서 확인할 수 있나요?</h5>
