--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>APPJAM</title>
+  <title>APPJAM 11st</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -40,18 +40,21 @@
     <div class="section no-pad-bot" style="display: table-cell; vertical-align: middle">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2" style="margin-bottom: 0.3rem">AppJam 10th</h1>
+        <h1 class="header center teal-text text-lighten-2" style="margin-bottom: 0.3rem">AppJam 11st</h1>
         <div class="row center">
           <h5 class="header col s12 light">앱잼은 당일 주어진 주제를 가지고 24시간동안 앱을 함께 만드는 축제입니다.</h5>
         </div>
         <div class="row center">
-          <a href="http://goo.gl/gzR0He" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+          <a href="https://goo.gl/IUoylV" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(생활/게임)</a>
+        </div>
+        <div class="row center">
+          <a href="https://goo.gl/qonlcM" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(IoT)</a>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="image/first.jpg" alt="Unsplashed background img 1">
+    <div class="parallax"><img src="image/group_shot.jpg" alt="Unsplashed background img 1">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -61,7 +64,6 @@
     <div class="section">
       <!--   Icon Section   -->
       <div class="row">
-        <b style="font-size: 18pt; text-align:center">참가 우선순위는 신청순이 아닌 입금순입니다!!!!<br> 신청자가 8일 현재 약 190명이지만 빠르게 입금해주시면 아직 늦지 않았습니다</b><br>
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center red-text"><i class="material-icons">flash_on</i></h2>
@@ -93,7 +95,7 @@
             <h2 class="center red-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">자세한 규칙</h5>
 
-            <p class="light">이번 10회 앱잼은 어떻게 대회가 이루어지는지, 상은 얼마나 주는지, 자세한 규칙들을 확인해보세요!</p>
+            <p class="light">이번 11회 앱잼은 어떻게 대회가 이루어지는지, 상은 얼마나 주는지, 자세한 규칙들을 확인해보세요!</p>
             <div class="row center">
               <a href="detail.html" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">자세한 내용</a>
             </div>
@@ -146,7 +148,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="image/schedule.jpg" alt="Unsplashed background img 2">
+    <div class="parallax"><img src="image/orientation.jpg" alt="Unsplashed background img 2">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -156,7 +158,8 @@
     <div class="section">
       <div class="row">
         <div class="col s12 center">
-          <h4>2016년 3월 26일 (토) ~ 27일 (일)</h4>
+          <h4>2016년 7월 23일 (토) ~ 24일 (일)</h4>
+          * 아래 타임테이블은 아직 확정되지 않았으며 바뀔 수 있습니다.<br>
 
         <table class="centered highlight">
          <thead>
@@ -169,7 +172,7 @@
 
          <tbody>
           <tr>
-            <td colspan="3">3월 26일 토요일
+            <td colspan="3">7월 23일 토요일
             </td>
           </tr>
            <tr>
@@ -204,7 +207,7 @@
              <td>7층 엘리베이터 앞</td>
            </tr>
           <tr>
-            <td colspan="3">3월 28일 일요일</td>
+            <td colspan="3">7월 24일 일요일</td>
           </tr>
            <tr>
              <td>AM 12:00 ~ AM 07:00</td>
@@ -247,7 +250,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="image/place.jpg" alt="Unsplashed background img 3">
+    <div class="parallax"><img src="image/team1.jpg" alt="Unsplashed background img 3">
       <div class = "background-dark"></div>
   </div>
   </div>
@@ -296,7 +299,7 @@
             <li class="collection-item avatar">
               <img src="image/saejin.png" alt="" class="circle">
               <span class="title"><h5>송세진</h5></span>
-              <p>Smarteen AppClub 5기 부회장, 울산애니원고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기 부회장, 울산애니원고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/sangwoo.jpg" alt="" class="circle">
@@ -343,7 +346,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="image/sponsor.jpg" alt="Unsplashed background img 2">
+    <div class="parallax"><img src="image/team2.jpg" alt="Unsplashed background img 2">
       <div class = "background-dark"></div>
   </div>
   </div>
@@ -354,8 +357,12 @@
       <div class="row center">
          <h4>앱잼을 지원사격해주시는 스폰서를 소개합니다!<br></h4>
          <br><br>
-         <img class="responsive-img" width="300" src="image/place.jpg">
-         <h4>안양창조경제융합센터<br></h4>
+         <img class="responsive-img" width="300" src="image/anyang_logo.gif"><br>
+         안양시청<br>
+         <br>
+         <br>
+         <img class="responsive-img" width="300" src="image/anyang_cecc.jpg"><br>
+         안양창조경제융합센터<br>
       </div>
     </div>
   </div>
@@ -366,11 +373,17 @@
       <div class="container">
         <div class="row center">
           <h5 class="header col s12 light" style="margin: 0.82rem 0 2rem 0">여러분들과 함께 할 모든 준비가 마쳤습니다.<br>여러분들의 많은 참여 부탁드립니다!</h5>
-          <a href="http://goo.gl/gzR0He" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기</a>
+
+        <div class="row center">
+          <a href="https://goo.gl/IUoylV" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(생활/게임)</a>
+        </div>
+        <div class="row center">
+          <a href="https://goo.gl/qonlcM" target="_blank" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">신청하기(IoT)</a>
+        </div>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="image/last.jpg" alt="Unsplashed background img 3">
+    <div class="parallax"><img src="image/group_shot.jpg" alt="Unsplashed background img 3">
       <div class = "background-dark"></div>
     </div>
   </div>
@@ -395,7 +408,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      주최 <a class="white-text text-lighten" href="https://www.facebook.com/groups/skappclub/">Smarteen App Club</a>
+      주최 <a class="white-text text-lighten" href="https://www.facebook.com/groups/skappclub/">Smarteen App Club</a> 후원 안양시청 안양창조경제융합센터
       </div>
     </div>
   </footer>
