--- a/poster.html
+++ b/poster.html
@@ -13,6 +13,7 @@
 
   <style>
   img {
+    max-width: 100%;
   	margin: 10px auto;
   }
   </style>
@@ -46,7 +47,7 @@
 <div class="container">
 <div class="section center">
 <img src="image/poster.jpg" />
-<img src="image/poster_back.jpeg" />
+<img src="image/poster_back.jpg" />
 </div>
 </div>
 
