--- a/poster.html
+++ b/poster.html
@@ -71,7 +71,7 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-  주최 <a class="white-text text-lighten" href="https://www.facebook.com/groups/skappclub/">Smarteen App Club</a>
+  주최 <a class="white-text text-lighten" href="https://www.facebook.com/groups/skappclub/">Smarteen App Club</a> 후원 중소기업청 SK TechX 안양시청 안양창조경제융합센터 
   </div>
 </div>
 </footer>
