poster fixed and faq error fixed

--- a/poster.html
+++ b/poster.html
@@ -46,7 +46,7 @@
 
 <div class="container">
 <div class="section center">
-<img src="image/poster.jpg" />
+<img src="image/poster.png" />
 <img src="image/poster_back.jpg" />
 </div>
 </div>
