--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="col s12 center">
           <div class="image-container">
             <a href="poster.html" target="_blank">
-              <img id="poster" src="image/poster.jpg" style="margin:0px auto;">
+              <img id="poster" src="image/poster.png" style="margin:0px auto;">
             </a>
             <p style="font-size: 18pt">이미지를 클릭해서 자세히 볼 수 있습니다</p>
           </div>
