IoT content added

--- a/detail.html
+++ b/detail.html
@@ -72,8 +72,10 @@ th, td {
 ﻿앱잼은 당일 주어진 주제를 가지고 즉석에서 팀을 구성해 24시간 동안 앱을 만들어내는 축제입니다. 주제와 관련된 앱 아이디어를 직군별로 구성된 팀원들끼리 앱을 개발합니다.<br>
 안드로이드, 아이폰, 웹앱 모바일에서만 구동된다면 어느 플랫폼이든 상관하지 않습니다. <br>
 유틸리티, 게임 등 장르를 구별하지 않습니다.<br>
-제 11회 앱잼부터는 사물인터넷(IoT) 분야도 추가되어 대회를 진행하고 있습니다. 
+제 11회 앱잼부터는 사물인터넷(IoT) 분야도 추가되어 대회를 진행하고 있습니다.<br>
 *단, 심사는 생활, 게임, IoT 각각 나누어 진행됩니다.<br>
+<br>
+IoT는 사전 교육에서 팀빌딩 및 교육이 이루어진 뒤 앱잼 당일 개발하는 방식으로 진행됩니다. 제 11회 앱잼에서 사전 교육은 7월 15일 상명대학교에서 이루어질 예정입니다.
 <br>
 <a href="http://www.appjam.kr" target="_blank">AppJam공식 홈페이지</a><br>
 <a href="http://blog.naver.com/b_hyeri" target="_blank">AppJam공식 블로그</a><br>
@@ -151,6 +153,7 @@ th, td {
 <br>
 <br>
 <h1 id="team_building">팀빌딩</h1>
+- IoT 팀빌딩은 7월 15일 상명대학교 참가자 사전교육 프로그램에서 이루어집니다. 자세한 사항은 참가자들에게 개별 연락드릴 예정입니다.
 <h1 id="notice">유의사항</h1>
 - 앱잼은 개인정보 활동 동의서 및 촬영 동의에 대한 사전 동의서에 동의하셔야 합니다.<br>
 - 여러분들의 활동들을 사진으로 남겨서 포트폴리오에 쓸 수 있도록 제공합니다.<br>
