--- a/faq.html
+++ b/faq.html
@@ -151,7 +151,10 @@
       <h5>총무/회계 김나연</h5>
       010-8712-6145<br>
       <a href="https://www.facebook.com/nayeon0407">https://www.facebook.com/nayeon0407</a>
-	  
+      <h5>IoT QnA</h5>
+      IoT 개발 멘토들에게 연락해 주시기 바랍니다. IoT는 지정 멘토들이 QnA를 해드립니다!!!<br>
+      황순호 멘토(010-2000-2704)<br>
+      고수창 멘토(010-4915-3383)<br>
 	</div>
 </div>
 
