--- a/faq.html
+++ b/faq.html
@@ -111,12 +111,12 @@
       </div>
       <h5>- 대회 도중 외부로 나가거나 대회 장소로 들어오는 게 가능한가요?</h5>
       중요한 일이 아닐 경우 자제 부탁드립니다.
-      <h5>- 참가 공문을 학교로 보내주실 수 있나요?</h5>
-
+      <h5>- 참가 공문을 학문교로 보내주실 수 있나요?</h5>
+      담당 김나연(010-8712-6145)에게 문자로 학교명, 학번, 이름을 보내주시면 됩니다. 7월 16 이후에는 불가능합니다.
       <h5>- 식사가 제공되나요?</h5>
       첫째날 저녁, 야식, 둘째날 아침이 제공됩니다. 간식도 충분히 준비되어 있어 맛있게 드시면 됩니다.
       <h5>- 노트북이 제공되나요?</h5>
-      아니요, 개인 노트북을 갖고 오셔야 합니다. PC, 모니터 등은 주변 사람들이 불편할 수 있으므로 되도록 가져오지 말아 주시기 바랍니다.
+      아니요, 개인 노트북을 갖고 오셔야 합니다. PC, 모니터 등은 주변 사람들 불편할 수 있으므로 되도록 가져오지 말아 주시기 바랍니다.
       <h5>- 인터넷 환경은 어떤가요?</h5>
       무선 AP를 충분히 설치하여 원활한 인터넷 환경을 만들어 두었습니다.
       <div class="row center">
@@ -132,23 +132,20 @@
       <h5>- 역대 수상 작품은 어디에서 확인할 수 있나요?</h5>
       현재 9회 앱잼 수상작들은 <a href="https://github.com/KimHeeKue/The-9th-AppJam">GitHub appjam9th</a> 페이지에서 확인하실 수 있습니다.
       <h5>- 상장은 어떻게 받나요?</h5>
-
+      대회 당일에는 팜플릿으로 수여하며 추후 상장은 택배로 각 참가자가 소속된 학교로 배송됩니다(학생이 아닌 사람은 집으로 배송됩니다).
       <div class="row center">
           <div class="icon-block">
             <h1 id="direct" class="center red-text"><i class="material-icons">call</i></h1>
             <h2 class="center">직접 문의</h2>
           </div>
       </div>
-      <h5>회장 윤상호</h5>
-      010-4422-1124<br>
-      <a href="https://www.facebook.com/sangho1124">https://www.facebook.com/sangho1124</a>
-      <h5>부회장 송세진</h5>
+      <h5>회장단 송세진</h5>
       010-6755-4815<br>
       <a href="https://www.facebook.com/profile.php?id=100001299266383">https://www.facebook.com/profile.php?id=100001299266383</a>
-      <h5>부회장 강상우</h5>
+      <h5>회장단 강상우</h5>
 		010-4257-9699<br>
       <a href="https://www.facebook.com/profile.php?id=100004662485358">https://www.facebook.com/profile.php?id=100004662485358</a>
-      <h5>총무/회계 김나연</h5>
+      <h5>회장단 김나연</h5>
       010-8712-6145<br>
       <a href="https://www.facebook.com/nayeon0407">https://www.facebook.com/nayeon0407</a>
       <h5>IoT QnA</h5>
@@ -168,10 +165,9 @@
         <div class="right col l3 s12">
           <h5 class="white-text">문의하기</h5>
           <ul>
-            <li><a class="white-text" href="https://www.facebook.com/sangho1124">회장 윤상호</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100001299266383">부회장 송세진</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100004662485358">부회장 강상우</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/nayeon0407">총무/회계 김나연</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100001299266383">회장단 송세진</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100004662485358">회장단 강상우</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/nayeon0407">회장단 김나연</a></li>
           </ul>
         </div>
       </div>
