--- a/index.html
+++ b/index.html
@@ -292,44 +292,39 @@
 
           <ul class="collection">
             <li class="collection-item avatar">
-              <img src="image/sangho.jpg" alt="" class="circle">
-              <span class="title"><h5>윤상호</h5></span>
-              <p>Smarteen AppClub 5기 회장, 선린인터넷고등학교 재학 중</p>
-            </li>
-            <li class="collection-item avatar">
               <img src="image/saejin.png" alt="" class="circle">
               <span class="title"><h5>송세진</h5></span>
-              <p>Smarteen AppClub 5기 부회장, 울산애니원고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 울산애니원고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/sangwoo.jpg" alt="" class="circle">
               <span class="title"><h5>강상우</h5></span>
-              <p>Smarteen AppClub 5기 부회장, 게임과학고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 게임과학고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/jongchang.jpg" alt="" class="circle">
               <span class="title"><h5>이종창</h5></span>
-              <p>Smarteen AppClub 5기 총무, 한세사이버고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 한세사이버고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/heegyu.jpg" alt="" class="circle">
               <span class="title"><h5>김희규</h5></span>
-              <p>Smarteen AppClub 5기 총무, 선린인터넷고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 선린인터넷고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/nayeon.jpg" alt="" class="circle">
               <span class="title"><h5>김나연</h5></span>
-              <p>Smarteen AppClub 5기 총무, 미림여자정보과학고등학교 재학 중</p>
+              <p>Smarteen AppClub 5기, 미림여자정보과학고등학교 재학 중</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/jeongseok.png" alt="" class="circle">
               <span class="title"><h5>이정석</h5></span>
-              <p>Smarteen AppClub 5기 총무, 인평자동차고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 인평자동차고등학교 졸업</p>
             </li>
             <li class="collection-item avatar">
               <img src="image/hyeri.jpg" alt="" class="circle">
               <span class="title"><h5>변혜리</h5></span>
-              <p>Smarteen AppClub 5기 총무, 미림여자정보과학고등학교 졸업</p>
+              <p>Smarteen AppClub 5기, 미림여자정보과학고등학교 졸업</p>
             </li>
           </ul>
         </div>
@@ -398,10 +393,9 @@
         <div class="right col l3 s12">
           <h5 class="white-text">문의하기</h5>
           <ul>
-            <li><a class="white-text" href="https://www.facebook.com/sangho1124">회장 윤상호</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100001299266383">부회장 송세진</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100004662485358">부회장 강상우</a></li>
-            <li><a class="white-text" href="https://www.facebook.com/nayeon0407">총무/회계 김나연</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100001299266383">회장단 송세진</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100004662485358">회장단 강상우</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/nayeon0407">회장단 김나연</a></li>
           </ul>
         </div>
       </div>
