--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="section no-pad-bot" style="display: table-cell; vertical-align: middle">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2" style="margin-bottom: 0.3rem">AppJam 11st</h1>
+        <h1 class="header center teal-text text-lighten-2" style="margin-bottom: 0.3rem">AppJam 11th</h1>
         <div class="row center">
           <h5 class="header col s12 light">앱잼은 당일 주어진 주제를 가지고 24시간동안 앱을 함께 만드는 축제입니다.</h5>
         </div>
