--- a/poster.html
+++ b/poster.html
@@ -62,7 +62,7 @@
       <h5 class="white-text">문의하기</h5>
       <ul>
           <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100001299266383">회장단 송세진</a></li>
-          <li><a class="white-text" href="https://www.facebook.com/profile.php?id=100004662485358">회장단 강상우</a></li>
+          <li><a class="white-text" href="https://www.facebook.com/maestrojclee?fref=ts">회장단 이종창</a></li>
           <li><a class="white-text" href="https://www.facebook.com/nayeon0407">회장단 김나연</a></li>
       </ul>
     </div>
